<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AnadirProyectoActivity">

        <TextView
            android:id="@+id/textViewTitleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameEditing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/firstName_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/firstname_textView"
            app:layout_constraintTop_toBottomOf="@+id/showIdTextView" />

        <EditText
            android:id="@+id/descriptionEditing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/descripcion_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/description_textView"
            app:layout_constraintTop_toBottomOf="@id/nameEditing" />

        <Button
            android:id="@+id/buttonEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="editarProyecto"
            android:text="@string/editar_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autocomplete_fragment_editing"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/firstname_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/firstName_field"
            app:layout_constraintBottom_toBottomOf="@+id/nameEditing"
            app:layout_constraintEnd_toEndOf="@+id/end_date_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nameEditing" />

        <TextView
            android:id="@+id/description_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/descripcion_field"
            app:layout_constraintBottom_toBottomOf="@+id/descriptionEditing"
            app:layout_constraintEnd_toEndOf="@+id/end_date_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/descriptionEditing" />

        <EditText
            android:id="@+id/budgetEditing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/budget_field"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/budget_textView"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditing" />

        <TextView
            android:id="@+id/budget_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/budget_field"
            app:layout_constraintBottom_toBottomOf="@+id/budgetEditing"
            app:layout_constraintEnd_toEndOf="@+id/end_date_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/budgetEditing" />

        <Button
            android:id="@+id/start_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="openDatePicker"
            android:text="@string/start_date_field"
            app:layout_constraintBottom_toBottomOf="@+id/startTextDateEditing"
            app:layout_constraintEnd_toEndOf="@+id/end_date_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/startTextDateEditing"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/startTextDateEditing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/start_date_field"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_date_button"
            app:layout_constraintTop_toBottomOf="@+id/budgetEditing" />

        <EditText
            android:id="@+id/endTextDateEditing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/end_date_field"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/end_date_button"
            app:layout_constraintTop_toBottomOf="@+id/startTextDateEditing" />

        <Button
            android:id="@+id/end_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="openDateendPicker"
            android:text="@string/end_date_field"
            app:layout_constraintBottom_toBottomOf="@+id/endTextDateEditing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/endTextDateEditing" />

        <Spinner
            android:id="@+id/categoryEditing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/category_textView"
            app:layout_constraintTop_toBottomOf="@+id/endTextDateEditing" />

        <Spinner
            android:id="@+id/localityEditing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/locality_textView1"
            app:layout_constraintTop_toBottomOf="@+id/categoryEditing" />

        <TextView
            android:id="@+id/category_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/category"
            app:layout_constraintBottom_toBottomOf="@+id/categoryEditing"
            app:layout_constraintEnd_toEndOf="@+id/end_date_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/categoryEditing" />

        <TextView
            android:id="@+id/locality_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/locality_field"
            app:layout_constraintBottom_toBottomOf="@+id/localityEditing"
            app:layout_constraintEnd_toEndOf="@+id/end_date_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/localityEditing" />

        <TextView
            android:id="@+id/direccion_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion_field"
            app:layout_constraintBottom_toBottomOf="@+id/autocomplete_fragment_editing"
            app:layout_constraintEnd_toEndOf="@+id/end_date_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/autocomplete_fragment_editing" />

        <fragment
            android:id="@+id/autocomplete_fragment_editing"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/direccion_textView"
            app:layout_constraintTop_toBottomOf="@+id/localityEditing" />

        <TextView
            android:id="@+id/showIdTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/showId"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.17000002" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>